--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^7.3.0"
+    "electron": "^7.3.0",
+    "electron-cgi": "^1.0.5"
   },
   "dependencies": {
     "angular": "^1.7.9",
