--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,29 +2,38 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Electron: Main",
             "type": "node",
             "request": "launch",
-            "name": "Electron: Main",
             "protocol": "inspector",
-            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
             "runtimeArgs": [
                 "--remote-debugging-port=9223",
                 "."
             ],
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
+                "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
             }
-        },
+        }
+        /* Electron: Renderer is currently not working due to type chrome not being installed
         {
             "name": "Electron: Renderer",
             "type": "chrome",
             "request": "attach",
             "port": 9223,
-            "webRoot": "${workspaceRoot}",
+            "webRoot": "${workspaceFolder}",
             "timeout": 30000
-        }
+        },
+        */
     ],
     "compounds": [
+        {
+            "name": "Electron: Main",
+            "configurations": [
+                "Electron: Main"
+            ]
+        },
+        /*  Electron: Renderer is currently not working
         {
             "name": "Electron: All",
             "configurations": [
@@ -32,5 +41,6 @@
                 "Electron: Renderer"
             ]
         }
+        */
     ]
 }
