--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "angular": "^1.7.9",
     "angular-route": "^1.7.9",
     "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
-    "sortablejs": "^1.10.2"
+    "jquery": "^3.5.1"
   }
 }
